fix: ScrollToTop css changes for light/dark mode

--- a/src/components/ScrollToTop/ScrollToTop.module.css
+++ b/src/components/ScrollToTop/ScrollToTop.module.css
@@ -29,7 +29,7 @@
 
 .scrollToTop svg {
   display: inline-block;
-  color: var(--color-svg-fill);
+  color: var(--color-scroll-fill);
 }
 
 .visuallyHidden {
